--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="bg-gradient-to-br from-lime-50 to-emerald-100 min-h-screen flex flex-col">
   <header class="p-6 text-center">
     <h1 class="text-4xl font-extrabold tracking-tight text-emerald-700 drop-shadow-md">
-      Cocktails au 12 av Marechal Juin &amp; Carrieres
+      Cocktails au 12 av Marechal Juin à Carrieres
     </h1>
     <p class="mt-2 text-gray-600">A consommer sans modération&nbsp;!</p>
   </header>
