--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cocktails Carrieres</title>
+  <title>BABAL Cocktails Carrieres</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gradient-to-br from-lime-50 to-emerald-100 min-h-screen flex flex-col">
   <header class="p-6 text-center">
     <h1 class="text-4xl font-extrabold tracking-tight text-emerald-700 drop-shadow-md">
-      Cocktails au 12 av Marechal Juin à Carrieres
+      BABAL Cocktails Carrieres
     </h1>
-    <p class="mt-2 text-gray-600">A consommer sans modération&nbsp;!</p>
+    <p class="mt-2 text-gray-600">A consommer sans modération&nbsp; pr !</p>
   </header>
 
   <main class="flex-1 container mx-auto px-4">
